# MyGameEngine

./: CMakeLists.txt
assets/maps/: fg.csv
assets/shaders/: basic.frag
include/: AssetManager.h  Input.h  OrthoCamera.h  OrthoCameraController.h  Renderer2D.h  Tilemap.h  UI.h
src/: AssetManager.cpp  Config.cpp  Input.cpp  OrthoCamera.cpp  OrthoCameraController.cpp  Renderer2D.cpp  Tilemap.cpp  UI.cpp  main.cpp
